<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="201dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/instagram"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="333dp"
        android:layout_height="61dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/drawable_abuabu"
        android:gravity="center"
        android:text="@string/username"
        android:textColor="#ABABAB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/password"
        android:layout_width="333dp"
        android:layout_height="61dp"
        android:layout_marginTop="156dp"
        android:background="@drawable/drawable_abuabu"
        android:gravity="center"
        android:text="@string/password"
        android:textColor="#ABABAB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginas"
        android:layout_width="333dp"
        android:layout_height="61dp"
        android:layout_marginTop="404dp"
        android:background="@drawable/drawable_loginas"
        android:gravity="center"
        android:text="@string/loginas"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/fblogo"
        android:layout_width="39dp"
        android:layout_height="37dp"
        android:background="@drawable/facebook"
        app:layout_constraintBottom_toBottomOf="@+id/loginas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginas"
        app:layout_constraintVertical_bias="0.375" />

    <TextView
        android:id="@+id/forget"
        android:layout_width="193dp"
        android:layout_height="30dp"
        android:layout_marginBottom="68dp"
        android:gravity="center"
        android:text="@string/forget"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/loginas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.562" />

    <TextView
        android:id="@+id/gethelp"
        android:layout_width="152dp"
        android:layout_height="31dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/gethelp"
        android:textColor="#8F8E8E"
        app:layout_constraintBottom_toTopOf="@+id/or"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/or"
        android:layout_width="90dp"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/loginas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget"
        app:layout_constraintVertical_bias="0.451" />

    <Button
        android:id="@+id/button"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/signupbutton"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginas"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/login"
        android:layout_width="333dp"
        android:layout_height="61dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/drawable_birugelap"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/login"
        app:backgroundTint="@color/birugelap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

</androidx.constraintlayout.widget.ConstraintLayout>